--- a/source/Fasciculus.Site/input/_ViewImports.cshtml
+++ b/source/Fasciculus.Site/input/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using Statiq.Web
 @using Statiq.Web.Pipelines
 @using Microsoft.Extensions.Logging
+@using Fasciculus.Site.Blogging
 @inherits StatiqRazorPage<IDocument>
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
