--- a/source/Fasciculus.Site/theme/input/_layout.cshtml
+++ b/source/Fasciculus.Site/theme/input/_layout.cshtml
@@ -4,14 +4,28 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>@ViewData["Title"] - Fasciculus</title>
-        <link rel="stylesheet" href='@Context.GetLink("/lib/bootstrap/dist/css/bootstrap.min.css", true)' />
+        <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="/css/fasciculus-1.css" />
     </head>
     <body>
-        <div class="container">
-            <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
-        </div>
+        <header>
+            <nav>
+                <ul class="nav">
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/blog/">Blog</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="container">
+            @RenderBody()
+        </main>
+        <footer>
+            <nav>
+                <ul class="nav">
+                    <li class="nav-item"><a class="nav-link" href="/privacy.html">Privacy</a></li>
+                </ul>
+            </nav>
+        </footer>
     </body>
-    <script src="/lib/jquery/dist/jquery.min.js"></script>
+    <script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 </html>
