--- a/source/Fasciculus.Eve.Assets/MainPage.xaml
+++ b/source/Fasciculus.Eve.Assets/MainPage.xaml
@@ -14,7 +14,6 @@
             <Button
                 x:Name="StartBtn"
                 Text="Start" 
-                IsEnabled="{Binding StartEnabled}"
                 Command="{Binding StartCommand}" />
 
             <Grid>
@@ -28,9 +27,11 @@
                     <ColumnDefinition Width="100" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Label Text="SDE" FontAttributes="Bold" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" />
+                <Label Text="SDE Download &amp; Extract" FontAttributes="Bold" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" />
                 <Label Text="File" Grid.Row="1" Grid.Column="0" />
-                <Label Text="{Binding DownloadStatusText}" TextColor="{Binding DownloadStatusColor}" Grid.Row="1" Grid.Column="1" />
+                <Label x:Name="DownloadSdeStatus" Text="{Binding DownloadSdeStatusText}" TextColor="{Binding DownloadSdeStatusColor}" Grid.Row="1" Grid.Column="1" />
+                <Label Text="Extract" Grid.Row="1" Grid.Column="2" />
+                <ProgressBar x:Name="ExtractSdeProgress" Progress="{Binding ExtractSdeProgressValue}" ProgressColor="{Binding ExtractSdeProgressColor}" BackgroundColor="LightGray" MinimumHeightRequest="8" Grid.Row="1" Grid.Column="3" />
             </Grid>
             
         </VerticalStackLayout>
