--- a/source/Fasciculus.Eve.Assets/MainPage.xaml
+++ b/source/Fasciculus.Eve.Assets/MainPage.xaml
@@ -16,17 +16,20 @@
                 Text="Start" 
                 Command="{Binding StartCommand}" />
 
-            <Grid RowDefinitions="Auto,Auto,Auto,Auto" ColumnDefinitions="100,*,100,*,100,*">
+            <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto" ColumnDefinitions="100,*,100,*,100,*">
                 <Label Text="SDE Download &amp; Extract" FontAttributes="Bold" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" />
                 <Label Text="File" Grid.Row="1" Grid.Column="0" />
-                <Label Text="{Binding DownloadSdeStatusText}" TextColor="{Binding DownloadSdeStatusColor}" Grid.Row="1" Grid.Column="1" />
+                <Label Text="{Binding DownloadSdeText}" TextColor="{Binding DownloadSdeColor}" Grid.Row="1" Grid.Column="1" />
                 <Label Text="Extract" Grid.Row="1" Grid.Column="2" />
-                <ProgressBar Progress="{Binding ExtractSdeProgressValue}" ProgressColor="{Binding ExtractSdeProgressColor}" BackgroundColor="LightGray" MinimumHeightRequest="8" Grid.Row="1" Grid.Column="3" />
+                <ProgressBar Progress="{Binding ExtractSdeValue}" ProgressColor="{Binding ExtractSdeColor}" BackgroundColor="LightGray" MinimumHeightRequest="8" Grid.Row="1" Grid.Column="3" />
                 <Label Text="SDE Parsing" FontAttributes="Bold" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" />
                 <Label Text="Names" Grid.Row="3" Grid.Column="0" />
                 <Label Text="{Binding ParseNamesText}" TextColor="{Binding ParseNamesColor}" Grid.Row="3" Grid.Column="1" />
                 <Label Text="Types" Grid.Row="3" Grid.Column="2" />
                 <Label Text="{Binding ParseTypesText}" TextColor="{Binding ParseTypesColor}" Grid.Row="3" Grid.Column="3" />
+                <Label Text="Images" FontAttributes="Bold" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" />
+                <Label Text="Copy" Grid.Row="5" Grid.Column="0" />
+                <ProgressBar Progress="{Binding CopyImagesValue}" ProgressColor="{Binding CopyImagesColor}" BackgroundColor="LightGray" MinimumHeightRequest="8" Grid.Row="5" Grid.Column="1" />
             </Grid>
             
         </VerticalStackLayout>
