--- a/source/Fasciculus.Eve/Pages/InfoPage.xaml
+++ b/source/Fasciculus.Eve/Pages/InfoPage.xaml
@@ -11,9 +11,11 @@
         <HorizontalStackLayout>
             <controls:SideBar BindingContext="{Binding SideBar}" />
             <VerticalStackLayout Padding="16,16" Spacing="16">
-                <Grid RowDefinitions="Auto" ColumnDefinitions="100,*">
-                    <Label Text="Version" Grid.Row="0" Grid.Column="0" />
-                    <Label Text="{Binding Version}" Grid.Row="0" Grid.Column="1" />
+                <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="100,*">
+                    <Label Text="Application" Grid.Row="0" Grid.Column="0" />
+                    <Label Text="{Binding ApplicationVersion}" Grid.Row="0" Grid.Column="1" />
+                    <Label Text="SDE" Grid.Row="1" Grid.Column="0" />
+                    <Label Text="{Binding SdeVersion}" Grid.Row="1" Grid.Column="1" />
                 </Grid>
             </VerticalStackLayout>
         </HorizontalStackLayout>
