--- a/source/Fasciculus.Eve.Assets/AppShell.xaml
+++ b/source/Fasciculus.Eve.Assets/AppShell.xaml
@@ -3,12 +3,12 @@
     x:Class="Fasciculus.Eve.Assets.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Fasciculus.Eve.Assets"
-    Shell.FlyoutBehavior="Flyout"
+    xmlns:pages="clr-namespace:Fasciculus.Eve.Assets.Pages"
+    Shell.FlyoutBehavior="Disabled"
     Title="Fasciculus.Eve.Assets">
 
     <ShellContent
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate pages:MainPage}"
         Route="MainPage" />
 
 </Shell>
