--- a/source/Fasciculus.Eve.Assets/Pages/MainPage.xaml
+++ b/source/Fasciculus.Eve.Assets/Pages/MainPage.xaml
@@ -8,7 +8,9 @@
              Title="" Shell.NavBarIsVisible="False">
 
     <ContentPage.Resources>
+        <c:DownloadSdeStatusConverter x:Key="dwn" />
         <c:PendingToDoneConverter x:Key="ptd" />
+        <c:LongProgressInfoConverter x:Key="lpi" />
     </ContentPage.Resources>
 
     <ScrollView>
@@ -22,37 +24,72 @@
                 Command="{Binding StartCommand}" />
 
             <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="100,*,100,*,100,*" ColumnSpacing="16" RowSpacing="8">
-                <Label Text="SDE Download &amp; Extract" FontAttributes="Bold" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" />
-                <Label Text="File" Grid.Row="1" Grid.Column="0" />
-                <Label Text="{Binding DownloadSdeText}" TextColor="{Binding DownloadSdeColor}" Grid.Row="1" Grid.Column="1" />
-                <Label Text="Extract" Grid.Row="1" Grid.Column="2" />
-                <ProgressBar Progress="{Binding ExtractSdeValue}" ProgressColor="{Binding ExtractSdeColor}" MinimumHeightRequest="8" Grid.Row="1" Grid.Column="3" />
+                <Label Text="SDE Download &amp; Extract" FontAttributes="Bold"
+                       Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" />
+                <Label Text="File"
+                       Grid.Row="1" Grid.Column="0" />
+                <Label Text="{Binding DownloadSde, Converter={StaticResource dwn}}"
+                       TextColor="{Binding DownloadSde, Converter={StaticResource dwn}}"
+                       Grid.Row="1" Grid.Column="1" />
+                <Label Text="Extract"
+                       Grid.Row="1" Grid.Column="2" />
+                <ProgressBar Progress="{Binding ExtractSde, Converter={StaticResource lpi}}"
+                             ProgressColor="{Binding ExtractSde, Converter={StaticResource lpi}}"
+                             BackgroundColor="LightGray" MinimumHeightRequest="8"
+                             Grid.Row="1" Grid.Column="3" />
             </Grid>
 
             <Grid RowDefinitions="Auto,Auto,Auto" ColumnDefinitions="100,*,100,*,100,*" ColumnSpacing="16" RowSpacing="8">
-                <Label Text="SDE Parsing" FontAttributes="Bold" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" />
-                <Label Text="Names" Grid.Row="1" Grid.Column="0" />
-                <Label Text="{Binding ParseNames, Converter={StaticResource ptd}}" TextColor="{Binding ParseNames, Converter={StaticResource ptd}}" Grid.Row="1" Grid.Column="1" />
-                <Label Text="Types" Grid.Row="1" Grid.Column="2" />
-                <Label Text="{Binding ParseTypes, Converter={StaticResource ptd}}" TextColor="{Binding ParseTypes, Converter={StaticResource ptd}}" Grid.Row="1" Grid.Column="3" />
-                <Label Text="Regions" Grid.Row="2" Grid.Column="0" />
-                <ProgressBar Progress="{Binding ParseRegionsValue}" ProgressColor="{Binding ParseRegionsColor}" MinimumHeightRequest="8" Grid.Row="2" Grid.Column="1"/>
+                <Label Text="SDE Parsing" FontAttributes="Bold"
+                       Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" />
+                <Label Text="Names"
+                       Grid.Row="1" Grid.Column="0" />
+                <Label Text="{Binding ParseNames, Converter={StaticResource ptd}}"
+                       TextColor="{Binding ParseNames, Converter={StaticResource ptd}}"
+                       Grid.Row="1" Grid.Column="1" />
+                <Label Text="Types"
+                       Grid.Row="1" Grid.Column="2" />
+                <Label Text="{Binding ParseTypes, Converter={StaticResource ptd}}"
+                       TextColor="{Binding ParseTypes, Converter={StaticResource ptd}}"
+                       Grid.Row="1" Grid.Column="3" />
+                <Label Text="Regions"
+                       Grid.Row="2" Grid.Column="0" />
+                <ProgressBar Progress="{Binding ParseRegions, Converter={StaticResource lpi}}"
+                             ProgressColor="{Binding ParseRegions, Converter={StaticResource lpi}}"
+                             BackgroundColor="LightGray" MinimumHeightRequest="8"
+                             Grid.Row="2" Grid.Column="1"/>
                 <Label Text="Constellations" Grid.Row="2" Grid.Column="2" />
-                <ProgressBar Progress="{Binding ParseConstellationsValue}" ProgressColor="{Binding ParseConstellationsColor}" MinimumHeightRequest="8" Grid.Row="2" Grid.Column="3"/>
-                <Label Text="Solar Systems" Grid.Row="2" Grid.Column="4" />
-                <ProgressBar Progress="{Binding ParseSolarSystemsValue}" ProgressColor="{Binding ParseSolarSystemsColor}" MinimumHeightRequest="8" Grid.Row="2" Grid.Column="5"/>
+                <ProgressBar Progress="{Binding ParseConstellations, Converter={StaticResource lpi}}"
+                             ProgressColor="{Binding ParseConstellations, Converter={StaticResource lpi}}"
+                             BackgroundColor="LightGray" MinimumHeightRequest="8"
+                             Grid.Row="2" Grid.Column="3"/>
+                <Label Text="Solar Systems"
+                       Grid.Row="2" Grid.Column="4" />
+                <ProgressBar Progress="{Binding ParseSolarSystems, Converter={StaticResource lpi}}"
+                             ProgressColor="{Binding ParseSolarSystems, Converter={StaticResource lpi}}"
+                             BackgroundColor="LightGray" MinimumHeightRequest="8"
+                             Grid.Row="2" Grid.Column="5"/>
             </Grid>
 
             <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="100,*,100,*,100,*" ColumnSpacing="16" RowSpacing="8">
-                <Label Text="SDE Conversion" FontAttributes="Bold" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" />
-                <Label Text="Universe" Grid.Row="1" Grid.Column="2" />
-                <Label Text="{Binding ConvertUniverse, Converter={StaticResource ptd}}" TextColor="{Binding ConvertUniverse, Converter={StaticResource ptd}}" Grid.Row="1" Grid.Column="3" />
+                <Label Text="SDE Conversion" FontAttributes="Bold"
+                       Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" />
+                <Label Text="Universe"
+                       Grid.Row="1" Grid.Column="2" />
+                <Label Text="{Binding ConvertUniverse, Converter={StaticResource ptd}}"
+                       TextColor="{Binding ConvertUniverse, Converter={StaticResource ptd}}"
+                       Grid.Row="1" Grid.Column="3" />
             </Grid>
 
             <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="100,*,100,*,100,*" ColumnSpacing="16" RowSpacing="8">
-                <Label Text="Images" FontAttributes="Bold" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" />
-                <Label Text="Copy" Grid.Row="1" Grid.Column="0" />
-                <ProgressBar Progress="{Binding CopyImagesValue}" ProgressColor="{Binding CopyImagesColor}" BackgroundColor="LightGray" MinimumHeightRequest="8" Grid.Row="1" Grid.Column="1" />
+                <Label Text="Images" FontAttributes="Bold"
+                       Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" />
+                <Label Text="Copy"
+                       Grid.Row="1" Grid.Column="0" />
+                <ProgressBar Progress="{Binding CopyImages, Converter={StaticResource lpi}}"
+                             ProgressColor="{Binding CopyImages, Converter={StaticResource lpi}}"
+                             BackgroundColor="LightGray" MinimumHeightRequest="8"
+                             Grid.Row="1" Grid.Column="1" />
             </Grid>
 
             <Label Text="Changed Resources" FontAttributes="Bold" />
