--- a/source/Fasciculus.Eve.Assets/Pages/MainPage.xaml
+++ b/source/Fasciculus.Eve.Assets/Pages/MainPage.xaml
@@ -90,6 +90,11 @@
                              ProgressColor="{Binding CopyImages, Converter={StaticResource lpi}}"
                              BackgroundColor="LightGray" MinimumHeightRequest="8"
                              Grid.Row="1" Grid.Column="1" />
+                <Label Text="Create"
+                       Grid.Row="1" Grid.Column="2" />
+                <Label Text="{Binding CreateImages, Converter={StaticResource ptd}}"
+                       TextColor="{Binding CreateImages, Converter={StaticResource ptd}}"
+                       Grid.Row="1" Grid.Column="3" />
             </Grid>
 
             <Label Text="Changed Resources" FontAttributes="Bold" />
