--- a/source/Fasciculus.Eve/AppShell.xaml
+++ b/source/Fasciculus.Eve/AppShell.xaml
@@ -3,28 +3,33 @@
     x:Class="Fasciculus.Eve.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:pages="clr-namespace:Fasciculus.Eve.Pages"
+    xmlns:p="clr-namespace:Fasciculus.Eve.Pages"
     Shell.FlyoutBehavior="Disabled"
     Title="Fasciculus.Eve">
 
     <ShellContent
+        Title="Loading"
+        ContentTemplate="{DataTemplate p:LoadingPage}"
+        Route="Loading" />
+
+    <ShellContent
         Title="Info"
-        ContentTemplate="{DataTemplate pages:InfoPage}"
+        ContentTemplate="{DataTemplate p:InfoPage}"
         Route="Info" />
 
     <ShellContent
         Title="Industry"
-        ContentTemplate="{DataTemplate pages:IndustryPage}"
+        ContentTemplate="{DataTemplate p:IndustryPage}"
         Route="Industry" />
 
     <ShellContent
         Title="Market"
-        ContentTemplate="{DataTemplate pages:MarketPage}"
+        ContentTemplate="{DataTemplate p:MarketPage}"
         Route="Market" />
 
     <ShellContent
         Title="Map"
-        ContentTemplate="{DataTemplate pages:MapPage}"
+        ContentTemplate="{DataTemplate p:MapPage}"
         Route="Map" />
 
 </Shell>
