--- a/source/Fasciculus.Eve.Assets/Pages/MainPage.xaml
+++ b/source/Fasciculus.Eve.Assets/Pages/MainPage.xaml
@@ -23,7 +23,7 @@
                 Text="Start" 
                 Command="{Binding StartCommand}" />
 
-            <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="120,*,120,*,120,*" ColumnSpacing="16" RowSpacing="8">
+            <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="140,*,140,*,140,*" ColumnSpacing="16" RowSpacing="8">
                 <Label Text="SDE Download &amp; Extract" FontAttributes="Bold"
                        Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" />
                 <Label Text="File"
@@ -39,7 +39,7 @@
                              Grid.Row="1" Grid.Column="3" />
             </Grid>
 
-            <Grid RowDefinitions="Auto,Auto,Auto" ColumnDefinitions="120,*,120,*,120,*" ColumnSpacing="16" RowSpacing="8">
+            <Grid RowDefinitions="Auto,Auto,Auto,Auto" ColumnDefinitions="140,*,140,*,140,*" ColumnSpacing="16" RowSpacing="8">
                 <Label Text="SDE Parsing" FontAttributes="Bold"
                        Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" />
                 <Label Text="Names"
@@ -52,31 +52,36 @@
                 <Label Text="{Binding ParseTypes, Converter={StaticResource ptd}}"
                        TextColor="{Binding ParseTypes, Converter={StaticResource ptd}}"
                        Grid.Row="1" Grid.Column="3" />
+                <Label Text="Station Operations"
+                       Grid.Row="2" Grid.Column="0" />
+                <Label Text="{Binding ParseStationOperations, Converter={StaticResource ptd}}"
+                       TextColor="{Binding ParseStationOperations, Converter={StaticResource ptd}}"
+                       Grid.Row="2" Grid.Column="1" />
                 <Label Text="NPC Corporations"
-                       Grid.Row="1" Grid.Column="4" />
+                       Grid.Row="2" Grid.Column="2" />
                 <Label Text="{Binding ParseNpcCorporations, Converter={StaticResource ptd}}"
                        TextColor="{Binding ParseNpcCorporations, Converter={StaticResource ptd}}"
-                       Grid.Row="1" Grid.Column="5" />
+                       Grid.Row="2" Grid.Column="3" />
                 <Label Text="Regions"
-                       Grid.Row="2" Grid.Column="0" />
+                       Grid.Row="3" Grid.Column="0" />
                 <ProgressBar Progress="{Binding ParseRegions, Converter={StaticResource lpi}}"
                              ProgressColor="{Binding ParseRegions, Converter={StaticResource lpi}}"
                              BackgroundColor="LightGray" MinimumHeightRequest="8"
-                             Grid.Row="2" Grid.Column="1"/>
-                <Label Text="Constellations" Grid.Row="2" Grid.Column="2" />
+                             Grid.Row="3" Grid.Column="1"/>
+                <Label Text="Constellations" Grid.Row="3" Grid.Column="2" />
                 <ProgressBar Progress="{Binding ParseConstellations, Converter={StaticResource lpi}}"
                              ProgressColor="{Binding ParseConstellations, Converter={StaticResource lpi}}"
                              BackgroundColor="LightGray" MinimumHeightRequest="8"
-                             Grid.Row="2" Grid.Column="3"/>
+                             Grid.Row="3" Grid.Column="3"/>
                 <Label Text="Solar Systems"
-                       Grid.Row="2" Grid.Column="4" />
+                       Grid.Row="3" Grid.Column="4" />
                 <ProgressBar Progress="{Binding ParseSolarSystems, Converter={StaticResource lpi}}"
                              ProgressColor="{Binding ParseSolarSystems, Converter={StaticResource lpi}}"
                              BackgroundColor="LightGray" MinimumHeightRequest="8"
-                             Grid.Row="2" Grid.Column="5"/>
+                             Grid.Row="3" Grid.Column="5"/>
             </Grid>
 
-            <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="120,*,120,*,120,*" ColumnSpacing="16" RowSpacing="8">
+            <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="140,*,140,*,140,*" ColumnSpacing="16" RowSpacing="8">
                 <Label Text="SDE Conversion" FontAttributes="Bold"
                        Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" />
                 <Label Text="Data"
@@ -91,7 +96,7 @@
                        Grid.Row="1" Grid.Column="3" />
             </Grid>
 
-            <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="120,*,120,*,120,*" ColumnSpacing="16" RowSpacing="8">
+            <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="140,*,140,*,140,*" ColumnSpacing="16" RowSpacing="8">
                 <Label Text="Navigation" FontAttributes="Bold"
                        Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" />
                 <Label Text="Connections"
@@ -107,7 +112,7 @@
                              Grid.Row="1" Grid.Column="3" />
             </Grid>
 
-            <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="120,*,120,*,120,*" ColumnSpacing="16" RowSpacing="8">
+            <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="140,*,140,*,140,*" ColumnSpacing="16" RowSpacing="8">
                 <Label Text="Images" FontAttributes="Bold"
                        Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" />
                 <Label Text="Copy"
